# rust-wasm

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.orig  Jenkinsfile  build.sh  skaffold.yaml
charts/preview/: Makefile  requirements.yaml
charts/rust-wasm/: Chart.yaml  Makefile  values.yaml
charts/rust-wasm@tmp/durable-698c3f72/: jenkins-log.txt
static/: index.html  index.js
utils/rust-wasm-base/: Dockerfile
wasm-data/: Cargo.toml
wasm-data/src/: lib.rs
